cmake_minimum_required(VERSION 3.1)
project(aliasMethod)
set(Boost_USE_STATIC_LIBS       OFF)
set(Boost_USE_MULTITHREADED     ON)
set(Boost_USE_STATIC_RUNTIME    OFF)
find_package(Boost 1.53.0 COMPONENTS random REQUIRED)

add_library(aliasMethod STATIC aliasMethod.h aliasMethod.cpp)
target_include_directories(aliasMethod PRIVATE ${Boost_INCLUDE_DIRS})
target_include_directories(aliasMethod PUBLIC ${PROJECT_SOURCE_DIR})
export(TARGETS aliasMethod FILE aliasMethodConfig.cmake)
